header + formulaire + filtre sans css

--- a/index.html
+++ b/index.html
@@ -16,8 +16,51 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header>
+                <section class="logo">
+                    <img src="/images/logo/Booki.png" alt="Booki">
+                </section>       
+                <section class="menu">
+                    <button>Hébergements</button>
+                    <button>Activités</button>
+                </section>
+        </header>
         <main>
+            <div class="formulaire-de-recherche">
+                <section class="formulaire-title">
+                    <h2 class="section-title">Trouvez votre hébergement pour des vacances de rêve</h2>
+                    <p class="section-subtitle">En plein centre-ville ou en pleine nature</p>
+                </section>
+                <section class="barre-de-recherche">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <input type="search" class="barre-text" placeholder="Marseille, France"> <!-- <p class="barre-text">Marseille, France</p> -->
+                    <button class="button-text">Rechercher
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </section>
+                <section class="filtres">
+                    <p class="filtres-title">Filtres</p>
+                    <div class="filtres-icone">
+                        <i class="fa-solid fa-money-bill-wave"></i>
+                        <p class="filtres-text">Économique</p>
+                    </div>
+                    <div class="filtres-icone">
+                        <i class="fa-solid fa-house"></i>
+                        <p class="filtres-text">Familial</p>
+                    </div>
+                    <div class="filtres-icone">
+                        <i class="fa-solid fa-heart"></i>
+                        <p class="filtres-text">Romantique</p>
+                    </div>
+                    <div class="filtres-icone">
+                        <i class="fa-solid fa-fire"></i>
+                        <p class="filtres-text">Nos pépites</p>
+                    </div>
+                </section>
+                <section class="barre-info">
+                    <i class="fa-solid fa-info"></i>
+                    <p class="info-text">Plus de 500 logements sont disponibles dans cette ville</p>
+                </section>
+            </div>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
