Modif Header CSS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="main-container">
         <header>
                 <section class="logo">
-                    <img src="/images/logo/Booki.png" alt="Booki">
+                    <img src="/images/logo/Booki@3x.png" alt="Booki">
                 </section>       
                 <section class="menu">
                     <button>Hébergements</button>
@@ -34,8 +34,8 @@
                 <section class="barre-de-recherche">
                     <i class="fa-solid fa-location-dot"></i>
                     <input type="search" class="barre-text" placeholder="Marseille, France"> <!-- <p class="barre-text">Marseille, France</p> -->
-                    <button class="button-text">Rechercher
                     <i class="fa-solid fa-magnifying-glass"></i>
+                    <button class="button-text">Rechercher
                 </section>
                 <section class="filtres">
                     <p class="filtres-title">Filtres</p>
