--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
 <body>
     <div class="main-container">
         <header>
-                <section class="logo">
+                <div class="logo">
                     <img src="/images/logo/Booki@3x.png" alt="Booki">
-                </section>       
-                <section class="menu">
+                </div>       
+                <nav class="menu">
                     <button>Hébergements</button>
                     <button>Activités</button>
-                </section>
+                </nav>
         </header>
         <main>
             <div class="formulaire-de-recherche">
-                <section class="formulaire-title">
-                    <h2 class="section-title">Trouvez votre hébergement pour des vacances de rêve</h2>
-                    <p class="section-subtitle">En plein centre-ville ou en pleine nature</p>
-                </section>
-                <section class="barre-de-recherche">
-                    <i class="fa-solid fa-location-dot"></i>
-                    <input type="search" class="barre-text" placeholder="Marseille, France"> <!-- <p class="barre-text">Marseille, France</p> -->
+                    <h1 class="section-title">Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <p class="section-subtitle">En plein centre-ville ou en pleine nature</p>               
+                <div class="barre-de-recherche">
+                    <div class="logo-info">
+                        <i class="fa-solid fa-location-dot"></i>
+                    </div>
+                    <input type="search" class="barre-text" placeholder="Marseille, France">
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <button class="button-text">Rechercher
-                </section>
-                <section class="filtres">
+                </div>
+                <div class="filtres">
                     <p class="filtres-title">Filtres</p>
                     <div class="filtres-icone">
                         <i class="fa-solid fa-money-bill-wave"></i>
@@ -55,15 +55,28 @@
                         <i class="fa-solid fa-fire"></i>
                         <p class="filtres-text">Nos pépites</p>
                     </div>
-                </section>
-                <section class="barre-info">
+                </div>
+                <div class="barre-info">
                     <i class="fa-solid fa-info"></i>
                     <p class="info-text">Plus de 500 logements sont disponibles dans cette ville</p>
-                </section>
+                </div>
             </div>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
+                    <div class="hebergements-title">
+                        <h2 class="section-title">Hébergements à Marseille</h2>
+                    </div>
+                    <div class="hebergements-cards">
+                        <a href="#">
+                            <article class="card">
+                                <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
+                                <div class="card-content">
 
+                                </div>
+                            </article>
+                        </a>
+                    </div>
+                </section>
                 </section>
                 <section class="populaires">
                     <div class="populaires-title">
