--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                     <input type="search" class="barre-text" placeholder="Marseille, France">
                     <i class="fa-solid fa-magnifying-glass"></i>
-                    <button class="button-text">Rechercher
+                    <button class="button-text">Rechercher</button>
                 </div>
                 <div class="filtres">
                     <p class="filtres-title">Filtres</p>
